<?xml version="1.0"?>
<package format="2">
    <name>samsung_ros_driver</name>
    <version>0.0.0</version>
    <description>Samsung event-based camera ROS frontend</description>

    <maintainer email="amitrokh@umd.edu">Anton Mitrokhin</maintainer>
    <author email="amitrokh@umd.edu">Anton Mitrokhin</author>

    <license>GNU GPL 3.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>samsung_event_msgs</build_depend>
    <build_depend>roslaunch</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>samsung_event_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>image_transport</exec_depend>
</package>
